tests/fail_assign.rte
fun main() -> int {
  var p:int* = &0;
  {
    let x:int = 1;
    p = x;          // error: int* inconsistent with int
  }
  return *p;
}
